fix(blog): remove margin from post date for better alignment

--- a/src/app/features/blog/components/post-card/post-card.component.scss
+++ b/src/app/features/blog/components/post-card/post-card.component.scss
@@ -82,7 +82,6 @@
       color: palette.$text-secondary;
       font-style: italic;
       text-align: right;
-      margin: 0;
     }
 
     &__title {
